Fix: Made title of main slider slightly bigger and hid svgs on mobile

--- a/assets/styles/_homepage.scss
+++ b/assets/styles/_homepage.scss
@@ -20,7 +20,9 @@ body {
   display: grid;
   grid-gap: 20px;
   grid-template-columns: repeat(3, 40px);
-
+  @media (max-width: 480px) {
+    grid-gap: 10px;
+  }
  img {
    height: 40px;
     width: 40px;
@@ -59,6 +61,10 @@ body {
   //transform: translateY(-150%);
   padding-top: 20px;
   text-shadow: 2px 2px 4px #000000;
+  span {
+    font-size: clamp(35px, 3vw, 60px);
+    font-weight: 800;
+  }
 }
 
 .build-with-title, .services-title, .samples-title, .contact-section-title {
@@ -68,6 +74,9 @@ body {
   font-weight: 600;
   padding-top: 80px;
   padding-bottom: 20px;
+  @media (max-width: 480px) {
+    text-decoration: underline;
+  }
 }
 
 .build-with-wrapper {
@@ -126,6 +135,9 @@ body {
     grid-template-columns: repeat(2,1fr);
     padding: 10px;
     text-align: left;
+    svg {
+      display: none;
+    }
   }
 }
 
